[gd_scene load_steps=41 format=2]

[ext_resource path="res://scenes/GameNode.gd" type="Script" id=1]
[ext_resource path="res://scenes/Motopoor.gd" type="Script" id=2]
[ext_resource path="res://assets/character/sprite_running1.png" type="Texture" id=3]
[ext_resource path="res://assets/character/sprite_running2.png" type="Texture" id=4]
[ext_resource path="res://assets/character/sprite_running3.png" type="Texture" id=5]
[ext_resource path="res://assets/character/sprite_running4.png" type="Texture" id=6]
[ext_resource path="res://assets/character/jump_2.png" type="Texture" id=7]
[ext_resource path="res://assets/character/jump_3.png" type="Texture" id=8]
[ext_resource path="res://assets/character/agachar.png" type="Texture" id=9]
[ext_resource path="res://assets/character/jump_4.png" type="Texture" id=10]
[ext_resource path="res://assets/character/jump_6.png" type="Texture" id=11]
[ext_resource path="res://assets/background/fundo_branco.png" type="Texture" id=12]
[ext_resource path="res://assets/background/calcada.png" type="Texture" id=13]
[ext_resource path="res://assets/background/asfalto.png" type="Texture" id=14]
[ext_resource path="res://assets/background/fundo_edificios_1.png" type="Texture" id=15]
[ext_resource path="res://assets/background/luz_edificios_1.png" type="Texture" id=16]
[ext_resource path="res://assets/background/sun.png" type="Texture" id=17]
[ext_resource path="res://assets/background/moon.png" type="Texture" id=18]
[ext_resource path="res://scenes/Boleto.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/Gerador.gd" type="Script" id=20]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=21]
[ext_resource path="res://scenes/Money.tscn" type="PackedScene" id=22]
[ext_resource path="res://scenes/GeradorMoney.gd" type="Script" id=23]
[ext_resource path="res://assets/sound/2_Coins.ogg" type="AudioStream" id=24]
[ext_resource path="res://assets/sound/background.wav" type="AudioStream" id=25]
[ext_resource path="res://scenes/Ladrao.tscn" type="PackedScene" id=26]
[ext_resource path="res://scenes/GeradorLadrao.gd" type="Script" id=27]
[ext_resource path="res://assets/sound/perdeu_playboy.ogg" type="AudioStream" id=28]
[ext_resource path="res://assets/sound/pague_o_que_deve.ogg" type="AudioStream" id=29]
[ext_resource path="res://assets/background/perdeu.png" type="Texture" id=30]

[sub_resource type="CapsuleShape2D" id=1]
radius = 36.4866
height = 49.4088

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="Animation" id=4]
resource_name = "jump"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Running:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Jump:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Jump:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 26.0, 78.0, 156.1, 182.1, 234.1, 286.1, 312.1, 26.0, 78.0, 156.1, 182.1, 234.1, 286.1, 312.1, 338.1 ]
}

[sub_resource type="SegmentShape2D" id=5]
a = Vector2( 984.286, 487.057 )
b = Vector2( -43.0671, 487.338 )

[sub_resource type="SegmentShape2D" id=6]
a = Vector2( 35.7953, 0.243896 )
b = Vector2( 1459.23, 26.3898 )

[sub_resource type="Animation" id=7]
length = 4.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background/calcada1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 406.737 ), Vector2( -1024.02, 406.737 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background/asfalto1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 444.595 ), Vector2( -1024.02, 444.595 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background/calcada2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1024.12, 407.022 ), Vector2( 0, 407.022 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Background/asfalto2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1024.02, 444.88 ), Vector2( 0, 444.88 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Background/edificio_1:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1024.02, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Background/edificio_2:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1024.02, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "day_time"
length = 60.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background/bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 12.4, 23.1, 31.2, 38.7, 45.8, 59.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.027451, 1, 0.952941, 1 ), Color( 1, 0.415686, 0.027451, 1 ), Color( 0.203922, 0.0117647, 0.439216, 1 ), Color( 0.0980392, 0.0352941, 0.345098, 1 ), Color( 0.0980392, 0.0352941, 0.345098, 1 ), Color( 1, 0.415686, 0.027451, 1 ), Color( 0.027451, 1, 0.952941, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background/edificio_1/luz_edificios_1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 18, 41.6, 42.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 0.823529, 0.968627, 0.972549, 1 ), Color( 0.968627, 0.94902, 0.419608, 1 ), Color( 0.968627, 0.94902, 0.419608, 1 ), Color( 0.823529, 0.968627, 0.972549, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background/edificio_2/luz_edificios_2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 18, 41.7, 42.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.823529, 0.968627, 0.972549, 1 ), Color( 0.968627, 0.94902, 0.419608, 1 ), Color( 0.968627, 0.94902, 0.419608, 1 ), Color( 0.823529, 0.968627, 0.972549, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 120.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background/bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.000101658, 34.4692, 40.3967, 60, 80.2002, 95.2358, 106, 120 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.027451, 1, 0.952941, 1 ), Color( 1, 0.415686, 0.027451, 1 ), Color( 0.203922, 0.0117647, 0.439216, 1 ), Color( 0.0980392, 0.0352941, 0.345098, 1 ), Color( 0.0980392, 0.0352941, 0.345098, 1 ), Color( 0.2, 0.0862745, 0.65098, 1 ), Color( 0.00392157, 0.529412, 0.65098, 1 ), Color( 0.027451, 1, 0.952941, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background/edificio_1/luz_edificios_1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 36.8207, 37.8518, 105.586, 106.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 0.823529, 0.968627, 0.972549, 1 ), Color( 0.968627, 0.94902, 0.419608, 1 ), Color( 0.968627, 0.94902, 0.419608, 1 ), Color( 0.823529, 0.968627, 0.972549, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background/edificio_2/luz_edificios_2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 36.8207, 37.8518, 105.686, 106.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.823529, 0.968627, 0.972549, 1 ), Color( 0.968627, 0.94902, 0.419608, 1 ), Color( 0.968627, 0.94902, 0.419608, 1 ), Color( 0.823529, 0.968627, 0.972549, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Background3/Sun:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 19, 40, 41, 101, 102 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 430, -96 ), Vector2( 160, -36 ), Vector2( -233.861, 61.5247 ), Vector2( -261.966, 645.278 ), Vector2( 1114.67, 617.39 ), Vector2( 1014.81, 36.9947 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Background3/Moon:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 40, 41, 55, 78, 96, 97 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1022.9, 610.062 ), Vector2( 990, 70 ), Vector2( 620, -20 ), Vector2( 291.17, -16.589 ), Vector2( -121.8, 74.0074 ), Vector2( -168.668, 600.417 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "day_time"
length = 60.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background/bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 12.4, 23.1, 31.2, 38.7, 45.8, 59.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.027451, 1, 0.952941, 1 ), Color( 1, 0.415686, 0.027451, 1 ), Color( 0.203922, 0.0117647, 0.439216, 1 ), Color( 0.0980392, 0.0352941, 0.345098, 1 ), Color( 0.0980392, 0.0352941, 0.345098, 1 ), Color( 1, 0.415686, 0.027451, 1 ), Color( 0.027451, 1, 0.952941, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background/edificio_1/luz_edificios_1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 18, 41.6, 42.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 0.823529, 0.968627, 0.972549, 1 ), Color( 0.968627, 0.94902, 0.419608, 1 ), Color( 0.968627, 0.94902, 0.419608, 1 ), Color( 0.823529, 0.968627, 0.972549, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background/edificio_2/luz_edificios_2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 18, 41.7, 42.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.823529, 0.968627, 0.972549, 1 ), Color( 0.968627, 0.94902, 0.419608, 1 ), Color( 0.968627, 0.94902, 0.419608, 1 ), Color( 0.823529, 0.968627, 0.972549, 1 ) ]
}

[node name="GameNode" type="Node2D"]
script = ExtResource( 1 )

[node name="Motopoor" type="RigidBody2D" parent="."]
position = Vector2( 223.393, 465.27 )
z_index = 5
mode = 2
gravity_scale = 20.88
script = ExtResource( 2 )

[node name="MotopoorShape" type="CollisionShape2D" parent="Motopoor"]
position = Vector2( -1.93597, 2.15717 )
shape = SubResource( 1 )

[node name="Running" type="Sprite" parent="Motopoor"]

[node name="MotopoorAnim" type="AnimatedSprite" parent="Motopoor/Running"]
position = Vector2( -0.465973, -5.75958 )
scale = Vector2( 4.46933, 4.38566 )
frames = SubResource( 2 )
frame = 1
speed_scale = 2.2
playing = true

[node name="Jump" type="Sprite" parent="Motopoor"]
editor/display_folded = true
visible = false
rotation = 0.453786

[node name="MotopoorJump" type="AnimatedSprite" parent="Motopoor/Jump"]
position = Vector2( -67.846, -76.5329 )
scale = Vector2( 4.32211, 4.37169 )
frames = SubResource( 3 )
frame = 1
playing = true
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Motopoor"]
playback_speed = 2.54
anims/jump = SubResource( 4 )

[node name="Limites" type="StaticBody2D" parent="."]
editor/display_folded = true

[node name="Inferior" type="CollisionShape2D" parent="Limites"]
position = Vector2( 42.9708, 50.9834 )
shape = SubResource( 5 )

[node name="Superior" type="CollisionShape2D" parent="Limites"]
position = Vector2( 42.9708, -487.412 )
shape = SubResource( 5 )

[node name="chao" type="Area2D" parent="Limites"]
position = Vector2( -40.014, 526.863 )
z_index = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limites/chao"]
position = Vector2( 0, -2 )
shape = SubResource( 6 )

[node name="Background" type="AnimationPlayer" parent="."]
editor/display_folded = true
autoplay = "bgAnim"
anims/bgAnim = SubResource( 7 )
anims/day_time = SubResource( 8 )

[node name="bg" type="Sprite" parent="Background"]
modulate = Color( 0.0274538, 0.999998, 0.952938, 1 )
texture = ExtResource( 12 )
centered = false

[node name="predio1" type="Sprite" parent="Background"]

[node name="predio2" type="Sprite" parent="Background"]

[node name="calcada1" type="Sprite" parent="Background"]
position = Vector2( 0, 406.737 )
scale = Vector2( 1.2062, 1.0717 )
z_index = 3
texture = ExtResource( 13 )
centered = false

[node name="calcada2" type="Sprite" parent="Background"]
position = Vector2( 1024.12, 407.022 )
scale = Vector2( 1.20398, 1.0717 )
z_index = 3
texture = ExtResource( 13 )
centered = false

[node name="asfalto1" type="Sprite" parent="Background"]
position = Vector2( 0, 444.595 )
scale = Vector2( 2.00221, 1.26683 )
z_index = 2
texture = ExtResource( 14 )
centered = false

[node name="asfalto2" type="Sprite" parent="Background"]
position = Vector2( 1024.02, 444.88 )
scale = Vector2( 1.99852, 1.26683 )
z_index = 2
texture = ExtResource( 14 )
centered = false

[node name="edificio_1" type="Node2D" parent="Background"]
editor/display_folded = true
z_index = 1

[node name="fundo_edificios_1" type="Sprite" parent="Background/edificio_1"]
modulate = Color( 0.0235294, 0.0235294, 0.0235294, 1 )
position = Vector2( -3.70123, 90 )
scale = Vector2( 1.00361, 1 )
texture = ExtResource( 15 )
centered = false

[node name="luz_edificios_1" type="Sprite" parent="Background/edificio_1"]
modulate = Color( 0.823529, 0.968627, 0.972549, 1 )
position = Vector2( 4, 142 )
texture = ExtResource( 16 )
centered = false

[node name="edificio_2" type="Node2D" parent="Background"]
editor/display_folded = true
z_index = 1

[node name="fundo_edificios_2" type="Sprite" parent="Background/edificio_2"]
modulate = Color( 0.0235294, 0.0235294, 0.0235294, 1 )
position = Vector2( 1024, 90 )
texture = ExtResource( 15 )
centered = false

[node name="luz_edificios_2" type="Sprite" parent="Background/edificio_2"]
modulate = Color( 0.823529, 0.968627, 0.972549, 1 )
position = Vector2( 1028.02, 142 )
texture = ExtResource( 16 )
centered = false

[node name="Background3" type="AnimationPlayer" parent="."]
editor/display_folded = true
autoplay = "bgAnim"
anims/bgAnim = SubResource( 9 )
anims/day_time = SubResource( 10 )

[node name="Sun" type="Sprite" parent="Background3"]
position = Vector2( 430, -96 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 17 )
centered = false

[node name="Moon" type="Sprite" parent="Background3"]
position = Vector2( 266.347, 603.938 )
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 18 )
centered = false

[node name="Boletos" type="Node2D" parent="."]
editor/display_folded = true
z_index = 4

[node name="Boleto" parent="Boletos" instance=ExtResource( 19 )]
position = Vector2( 40.9973, 3.3241 )

[node name="Gerador" type="Position2D" parent="Boletos"]
position = Vector2( 1045.77, 481.397 )
z_index = 4
script = ExtResource( 20 )

[node name="Timer" type="Timer" parent="Boletos/Gerador"]
wait_time = 3.0
autostart = true

[node name="font" type="Node2D" parent="."]
editor/display_folded = true
z_index = 4

[node name="Control" type="Control" parent="font"]
margin_left = 101.0
margin_top = 74.0
margin_right = 336.0
margin_bottom = 149.0

[node name="Label" type="Label" parent="font/Control"]
margin_left = -56.4927
margin_top = -38.9605
margin_right = 154.507
margin_bottom = 35.0395
custom_fonts/font = ExtResource( 21 )
text = "R$ 100"
uppercase = true

[node name="recorde" type="Node2D" parent="."]
visible = false
position = Vector2( -130, 380 )
z_index = 11

[node name="Control" type="Control" parent="recorde"]
margin_left = 101.0
margin_top = 74.0
margin_right = 336.0
margin_bottom = 149.0

[node name="label" type="Label" parent="recorde/Control"]
margin_left = 359.343
margin_top = -68.0528
margin_right = 761.343
margin_bottom = -4.0528
custom_fonts/font = ExtResource( 21 )
text = "Score: R$ 0"
uppercase = true

[node name="Moneys" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 1062.16, 363.811 )

[node name="Money" parent="Moneys" instance=ExtResource( 22 )]
position = Vector2( -1049.58, -362.167 )

[node name="GeradorMoney" type="Position2D" parent="Moneys"]
position = Vector2( 8.79041, 7.03232 )
script = ExtResource( 23 )

[node name="Timer" type="Timer" parent="Moneys/GeradorMoney"]
wait_time = 2.0
autostart = true

[node name="CoinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )
volume_db = 10.097

[node name="Background2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )
volume_db = -6.058
autoplay = true

[node name="Ladroes" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 10, 0 )

[node name="Ladrao" parent="Ladroes" instance=ExtResource( 26 )]

[node name="GeradorLadrao" type="Position2D" parent="Ladroes"]
position = Vector2( 1097.27, 480.021 )
script = ExtResource( 27 )

[node name="NoiteTimer" type="Timer" parent="Ladroes/GeradorLadrao"]
wait_time = 60.0
one_shot = true

[node name="DiaTimer" type="Timer" parent="Ladroes/GeradorLadrao"]
wait_time = 59.0
one_shot = true

[node name="FirstDaylightTimer" type="Timer" parent="Ladroes/GeradorLadrao"]
wait_time = 40.0
one_shot = true
autostart = true

[node name="GeradorLadraoTimer" type="Timer" parent="Ladroes/GeradorLadrao"]
wait_time = 10.0
one_shot = true

[node name="PerdeuPlayBoy" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 28 )
volume_db = 13.097

[node name="PagueOqueDeve" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 29 )
volume_db = 11.107

[node name="TimeToRestart" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="PerdeuImage" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.533739, 0.556163 )
z_index = 10
texture = ExtResource( 30 )
centered = false
[connection signal="body_entered" from="Limites/chao" to="Motopoor" method="_on_chao_body_entered"]
[connection signal="timeout" from="Boletos/Gerador/Timer" to="Boletos/Gerador" method="_on_Timer_timeout"]
[connection signal="timeout" from="Moneys/GeradorMoney/Timer" to="Moneys/GeradorMoney" method="_on_Timer_timeout"]
[connection signal="timeout" from="Ladroes/GeradorLadrao/NoiteTimer" to="Ladroes/GeradorLadrao" method="_on_NoiteTimer_timeout"]
[connection signal="timeout" from="Ladroes/GeradorLadrao/DiaTimer" to="Ladroes/GeradorLadrao" method="_on_DiaTimer_timeout"]
[connection signal="timeout" from="Ladroes/GeradorLadrao/FirstDaylightTimer" to="Ladroes/GeradorLadrao" method="_on_FirstDaylightTimer_timeout"]
[connection signal="timeout" from="Ladroes/GeradorLadrao/GeradorLadraoTimer" to="Ladroes/GeradorLadrao" method="_on_GeradorLadraoTimer_timeout"]
[connection signal="timeout" from="TimeToRestart" to="." method="_on_TimeToRestart_timeout"]
